--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
                 <tr class="pinky">
                     <th>No</th>
                     <th>Ulasan</th>
-                    <th>Ulasan_Bersih</th>
+                    <th>Ulasan Bersih</th>
                     <th>Sentimen</th>
                 </tr>
             </thead>
